# homework

./: .gitignore  README.md
apps/: Dockerfile  README.md  docker-compose.yaml
apps/backend/: package.json  server.js
apps/countries-api/: Dockerfile  db.json  pyproject.toml  server.py
apps/proxy/: Dockerfile  proxy.py  pyproject.toml
apps/ui/: README.md  angular.json  karma.conf.js  package.json
apps/ui/e2e/src/: app.e2e-spec.ts
apps/ui/src/: index.html  styles.css  styles.css.map  styles.scss
apps/ui/src/app/: api.service.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
apps/ui/src/app/dashboard/: dashboard.component.css  dashboard.component.css.map  dashboard.component.html  dashboard.component.scss  dashboard.component.ts
apps/ui/src/environments/: environment.prod.ts  environment.ts
ase/: README.md  docker-compose.yml
ase/processor/: Dockerfile  processor.py
iis/: README.md  docker-compose.yml
iis/data_api/: Dockerfile  api.py
iis/processor/: Dockerfile  processor.py
java/: README.md  pom.xml
java/src/main/avro/: payment.avsc
java/src/main/java/immuta/: App.java
java/src/test/java/immuta/: AppTest.java
nodejs/: Dockerfile  README.md  package.json  server.js
nodejs/ui/: app.js  index.html
