[tool.poetry]
name = "countries-api"
version = "0.1.0"
description = "A countries API for Immuta's applications homework assignment"
authors = ["Immuta Integrations <integrations@immuta.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "==1.1.2"
Flask-Limiter = "==1.4"
gevent = "^20.6.2"
Werkzeug = "==0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
